Fixed Hover Nav on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,9 +21,11 @@ li a {
     transition: .5s;
 }
 
-.navBarLinks:hover {
-    height: 100%;
-    background-color: #eee;
+@media (min-width: 768px) {
+  .navBarLinks:hover {
+      height: 100%;
+      background-color: #eee;
+  }
 }
 
 .carousel {
